--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Big+Shoulders+Display:wght@600;700;800;900&family=Explora&family=Hedvig+Letters+Serif:opsz@12..24&family=Inter:wght@300;400;500;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poiret+One&family=Poppins:wght@100;200;400;600;700;800&family=Press+Start+2P&family=Six+Caps&family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Anton&family=Bodoni+Moda:ital,opsz@0,6..96;1,6..96&family=Nunito+Sans:ital,opsz,wght@0,6..12,400;1,6..12,600&display=swap');
 
 :root {
     --font-size: 20px;
-    --color: rgb(237, 237, 237);
+    --color: rgb(219, 58, 26);
     --gutter: calc(var(--font-size)*1.618);
 }
 
@@ -13,8 +13,7 @@
 }
 
 body {
-    background-color: rgb(9, 9, 9);
-    font-family: sans-serif;
+    background-color: rgb(252, 243, 239);
     font-size: var(--font-size);
     padding-top: calc(var(--gutter)*3);
     padding-bottom: calc(var(--gutter)*3);
@@ -24,20 +23,72 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: var(--gutter);
+    text-align: center;
 }
 
 h1 {
-    color: var(--color);
+    font-size: calc(var(--font-size)*4.8);
+    margin-top: -13vh;
+    margin-bottom: -10px;
+    font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
+}
+
+h2, h3 {
+    font-size: 18px;
+    font-family: 'Bodoni Moda', serif;
+}
+
+h4 {
+    font-size: calc(var(--font-size)*4.8);
+    text-align: left;
+    margin-left: 2rem;
+    margin-top: -2rem;
+}
+
+li {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: calc(var(--font-size)*3);
+    text-transform: uppercase;
+    margin-top: -16px;
+    margin-left: 2rem;
+    text-align: center;
+}
+
+li:hover {
+    font-family: 'Bodoni Moda', serif;
+}
+
+.numbers {
+    font-family: 'Bodoni Moda', serif;
+    font-style: italic;
     font-size: calc(var(--font-size)*2);
 }
 
+section {
+    display: flex;
+    justify-content: center;
+}
+
+img {
+	display: block;
+    margin: 20px;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 5%;
+    border-color: var(--color);
+    box-shadow: 2px 2px 4px rgb(175, 175, 175);
+}
+
 footer {
-    margin-top: vh;
-    color: var(--color);
-    font-size: 18px;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 16px;
     position: absolute;
+    right: 0;
     bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-    align-items: center;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+    margin-bottom: -3rem;
+    height: 2rem;
 }
