--- a/style.css
+++ b/style.css
@@ -138,11 +138,13 @@ p { max-width: 50ch; }
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Anton&family=Bodoni+Moda:ital,opsz@0,6..96;1,6..96&family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,600;0,6..12,700;1,6..12,600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap');
+
 
 :root {
     --font-size: 20px;
-    --color: rgb(219, 58, 26);
+    --color: rgb(194, 50, 22);
     --gutter: calc(var(--font-size)*1.618);
 }
 
@@ -152,22 +154,32 @@ p { max-width: 50ch; }
     }
 }
 
+#file-background {
+    background-color: rgb(247, 240, 218);
+}
+
 body {
-    background-color: rgb(252, 243, 239);
+    background-color: var(--color);
     font-size: var(--font-size);
     color: var(--color);
     display: flex;
     flex-direction: column;
     row-gap: var(--gutter);
-    text-align: center;
-    font-family: 'Bodoni Moda', serif;
+    font-family: "Roboto Condensed", sans-serif;
+    padding: 25px 20px 20px 20px;
 }
 
 #channel-title {
-    font-size: calc(var(--font-size)*4.8);
-    margin-bottom: -10px;
-    font-family: 'Anton', sans-serif;
+    font-size: calc(var(--font-size)*2);
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    width: 350px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #channel-blocks {
@@ -175,27 +187,122 @@ body {
     padding-right: 28vw;
 }
 
+#channel-created-date {
+    color: rgb(40, 40, 40);
+    font-family: "Special Elite", system-ui;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+#channel-description {
+    margin-top: 0rem;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #channel-users {
-    padding-left: 10rem;
-    padding-right: 10rem;
-    padding-top: 2rem;
-    display: grid;
+    color: rgb(40, 40, 40);
+    font-family: "Special Elite", system-ui;
+    font-weight: 400;
+    font-size: 12px;
+    display: flex;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
 }
 
+#file-container { 
+    display: flex; 
+    padding: 0;
+    align-items: baseline;
+    justify-content: center;
+} 
+   
+.file-item { 
+    margin: 0;
+} 
 
-ul, li {
+.file-item + .file-item {
+    margin-left: 10px; /* Adjust the value as needed for the desired space */
+}
+
+#channel-link {
+    color: rgb(40, 40, 40);
+    font-family: "Special Elite", system-ui;
+    font-weight: 400;
+    font-size: 20px;
     text-align: center;
-    margin-top: 3rem;
+    display: block;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
-ul:first-child {
-    margin-top: -4rem;
+#project {
+    background-color:  rgb(247, 240, 218);
+    width: 70px;
 }
 
-ul {
-    margin-bottom: 5rem;
+h3 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    margin-top: -16px;
+    padding: 3px 0px 0px 8px;
+}
+
+h4 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2px;
+}
+
+h5 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 1rem;
+    padding-bottom: 2px;
+}
+
+hr {
+    color: var(--color);
+    border: 1px solid;
+    width: 216px;
+    margin: 0 auto;
+}
+
+#file-date-underline {
+    width: 316px;
+}
+
+#signature-underline {
+    width: 316px;
+}
+
+#catagories {
+    display: flex;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2.5rem;
+}
+
+#catagories li {
+    margin-top: 10px;
+    border-bottom: 2px solid rgb(194, 50, 22);
+    width: 170px;
+    text-transform: uppercase;
+    font-family: "Special Elite", system-ui;
+}
+
+li:hover {
+    color: black;
 }
 
 picture {
@@ -232,3 +339,11 @@ em {
 footer {
     margin-bottom: 2rem;
 }
+
+#signature-container { 
+    display: flex; 
+    padding: 0;
+    align-items: baseline;
+    justify-content: center;
+} 
+
