--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body {
     color: rgb(40, 40, 40);
     font-family: "Special Elite", system-ui;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 16px;
     display: flex;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
@@ -262,12 +262,13 @@ h4 {
 }
 
 h5 {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 500;
-    font-size: 14px;
+    color: rgb(40, 40, 40);
+    font-family: "Special Elite", system-ui;
+    font-weight: 400;
+    font-size: 36px;
     text-align: center;
-    margin-top: 1rem;
-    padding-bottom: 2px;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 hr {
@@ -282,7 +283,7 @@ hr {
 }
 
 #signature-underline {
-    width: 316px;
+    width: 300px;
 }
 
 #catagories {
@@ -345,5 +346,13 @@ footer {
     padding: 0;
     align-items: baseline;
     justify-content: center;
+    margin-top: 5rem;
 } 
 
+.signature-item { 
+    margin: 2px;
+} 
+
+.signature-item + .signature-item {
+    margin-left: 10px; /* Adjust the value as needed for the desired space */
+}
