--- a/articles/style.css
+++ b/articles/style.css
@@ -139,6 +139,16 @@ main {
 		justify-content: center;
 		align-items: center;
 		margin-right: 6rem;
+		filter: blur(5px);
+		cursor: pointer;
+	}
+
+	li:hover  {
+		z-index: 100;
+		transition: all 1000ms ease-in;
+		transform: scale(1.2);
+		filter: none; 
+		outline: none;
 	}
 
 	img {
