--- a/linked-media/style.css
+++ b/linked-media/style.css
@@ -73,10 +73,12 @@ li {
 	padding: 20px;
 	line-height: var(--spacing);
 	min-width: 370px;
-	margin-right: 2rem;
 	background-color: rgb(247, 240, 218);
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.428);
+	transition: all 0.5s ease-in;
+	transform: scale(1);
 }
+
 
 h3 {
 	color: rgb(194, 50, 22);
@@ -102,6 +104,11 @@ main {
 		display: flex;
 		left: 20%;
 	}
+
+	li {
+		transform: scale(0.9);
+	}
+
 	
 }
 
@@ -109,8 +116,9 @@ main {
 
 	li {
 		min-width: 400px;
-		margin-right: 5rem;
+		transform: scale(0.9);
 	}
+
 
 	ul {
 		position: relative;
@@ -129,6 +137,16 @@ main {
 		justify-content: center;
 		align-items: center;
 		margin-right: 6rem;
+		filter: blur(5px);
+		cursor: pointer;
+	}
+
+	li:hover  {
+		z-index: 100;
+		transition: all 1000ms ease-in;
+		transform: scale(1.2);
+		filter: none; 
+		outline: none;
 	}
 
 	img {
