--- a/images/style.css
+++ b/images/style.css
@@ -103,13 +103,36 @@ main {
 		left: 20%;
 	}
 	
+	li {
+		transform: scale(0.9);
+		filter: blur(5px);
+		cursor: pointer;
+		transition: transform 0.5s, filter 0.3s; 
+	}
+
+	li.focus {
+		z-index: 100;
+		transition: transform 0.3s, filter 0.3s; 
+		transform: scale(1);
+		filter: blur(0);
+	}
 }
 
 @media (min-width:480px) and (max-width:900px) {
 
 	li {
 		min-width: 400px;
-		margin-right: 5rem;
+		transform: scale(0.9);
+		filter: blur(5px);
+		cursor: pointer;
+		transition: transform 0.5s, filter 0.3s; 
+	}
+
+	li.focus {
+		z-index: 100;
+		transition: transform 0.3s, filter 0.3s; 
+		transform: scale(1.2);
+		filter: blur(0);
 	}
 
 	ul {
