--- a/linked-media/style.css
+++ b/linked-media/style.css
@@ -107,8 +107,17 @@ main {
 
 	li {
 		transform: scale(0.9);
+		filter: blur(5px);
+		cursor: pointer;
+		transition: transform 0.5s, filter 0.3s; 
 	}
 
+	li.focus {
+		z-index: 100;
+		transition: transform 0.3s, filter 0.3s; 
+		transform: scale(1);
+		filter: blur(0);
+	}
 	
 }
 
@@ -117,9 +126,18 @@ main {
 	li {
 		min-width: 400px;
 		transform: scale(0.9);
+		filter: blur(5px);
+		cursor: pointer;
+		transition: transform 0.5s, filter 0.3s; 
 	}
 
-
+	li.focus {
+		z-index: 100;
+		transition: transform 0.3s, filter 0.3s; 
+		transform: scale(1.2);
+		filter: blur(0);
+	}
+	
 	ul {
 		position: relative;
 		display: flex;
