--- a/linked-media/style.css
+++ b/linked-media/style.css
@@ -157,14 +157,14 @@ main {
 		margin-right: 6rem;
 		filter: blur(5px);
 		cursor: pointer;
+		transition: all 800ms ease-in;
 	}
 
 	li:hover  {
 		z-index: 100;
-		transition: all 1000ms ease-in;
+		transition: all 800ms ease-in;
 		transform: scale(1.2);
-		filter: none; 
-		outline: none;
+		filter: blur(0); 
 	}
 
 	img {
