--- a/soundtracks/style.css
+++ b/soundtracks/style.css
@@ -154,13 +154,14 @@ main {
 		margin-right: 6rem;
 		filter: blur(5px);
 		cursor: pointer;
+		transition: all 800ms ease-in;
 	}
 
 	li:hover  {
 		z-index: 100;
-		transition: all 1000ms ease-in;
+		transition: all 800ms ease-in;
 		transform: scale(1.2);
-		filter: none; 
+		filter: blur(0); 
 		outline: none;
 	}
 	
